# OnboardAgent

./: .config.example.env  .gitignore  Makefile  dev_env.sh  main.py  pyproject.toml
sim/: Dockerfile.PX4  dev_env.sh  gazebo_classic_dev_env.sh  gazebo_dev_env.sh
sim/gazebo/: Dockerfile.Gazebo
sim/pegasus/scripts/: simulation_1.py
src/: config.py  coordinator.py  download-handler.py  drone.py  main.py
src/Classes/: mavsdk_controller.py  mqtt_base.py  mqtt_jobs.py
src/Enums/: connection_types.py  job_status.py
src/Models/: telemetry_data.py
src/core/: drone_controller.py
src/enums/: connection_types.py  execution_state.py  job_status.py
src/exceptions/: config_exceptions.py  download_exceptions.py
src/telemetry/: collector.py  publisher.py
src/utils/: download_handler.py  zip_manager.py
tests/unit/: test_config.py
